# blocktoc

./: CMakeLists.txt  README.md  conanfile.py  run_test.ps1  run_test.sh
data/: sample.xml
src/: block_to_c.cpp  codegen.cpp  codegen.h  diagram_parser.cpp  diagram_parser.h  i_codegen.h  i_diagram_parser.h
src/models/: codegen_model.h  graph_model.h
test/: CMakeLists.txt  full_codegen_test.cpp
test/data/: add3.xml  add3Expected.h  cycles.xml  cyclesExpected.h  easy.xml  easyExpected.h  sampleExpected.h
